sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/Business_Onboarding_Detail__c.object-meta.xml
<CustomObject>
    <description>LEM-15116: It stores business onboarding details.</description>
    <label>Business Onboarding Detail</label>
    <nameField>
        <displayFormat>BOD-{0000}</displayFormat>
        <label>Business Onboarding Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Onboarding Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>