sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>LEM-15113: It is used to store the address of the Business Information.</description>
    <label>Business Address</label>
    <type>Address</type>
</CustomField>