sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It stores address line 1.</description>
    <inlineHelpText>Captures billing street</inlineHelpText>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>