sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It is used to store Bank account number.</description>
    <label>Bank Account Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>