sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates billing contact email.</description>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>