sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates billing contact last name.</description>
    <label>Billing Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>