sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates billing contact phone.</description>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>