sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Business Onboarding Details</relationshipLabel>
    <relationshipName>Business_Onboarding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>