sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Director_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It indicates business director email.</description>
    <label>Business Director: Email</label>
    <type>Email</type>
</CustomField>