sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Director_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Director_First_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates business director first name.</description>
    <label>Business Director: First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>