sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It represents the Business Id that was provisioned during the SSMO process.</description>
    <inlineHelpText>The Business Id that was provisioned during the SSMO process</inlineHelpText>
    <label>Business ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>