sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Owner_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Address__c</fullName>
    <description>LEM-15113: It is used to store the address of the Business Owner.</description>
    <label>Business Owner Address</label>
    <type>Address</type>
</CustomField>