sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Owner_DOB__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_DOB__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15117: It is used to store the birth date of the business owner.</description>
    <label>Business Owner: DOB</label>
    <type>Date</type>
</CustomField>