sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates business owner email.</description>
    <label>Business Owner: Email</label>
    <type>Email</type>
</CustomField>