sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Last_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates business owner last name.</description>
    <label>Business Owner: Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>