sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Business_Owner_Personal_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Personal_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15117: Indicates the business owner personal address.</description>
    <inlineHelpText>Signifies the Mx store hours of operations</inlineHelpText>
    <label>Business Owner Personal Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>