sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It is used to store the Country.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
                <isActive>false</isActive>
                <label>ALL</label>
            </value>
            <value>
                <fullName>AUS</fullName>
                <isActive>false</isActive>
                <label>AUS</label>
            </value>
            <value>
                <fullName>CAN</fullName>
                <isActive>false</isActive>
                <label>CAN</label>
            </value>
            <value>
                <fullName>NZ</fullName>
                <isActive>false</isActive>
                <label>NZ</label>
            </value>
            <value>
                <fullName>US</fullName>
                <isActive>false</isActive>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>