sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Institution_Number__c.field-meta.xml
<CustomField>
    <fullName>Institution_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: To store Institution number.</description>
    <label>Institution Number</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>