sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Mx_Onboarding_Link__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15116: It indicates Mx onboarding link.</description>
    <label>Mx Onboarding Link</label>
    <referenceTo>Mx_Onboarding_Link__c</referenceTo>
    <relationshipLabel>Business Onboarding Details</relationshipLabel>
    <relationshipName>Business_Onboarding_Details</relationshipName>
    <type>Lookup</type>
</CustomField>