sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Payment_Address__c.field-meta.xml
<CustomField>
    <fullName>Payment_Address__c</fullName>
    <description>LEM-15113: It is used to store the address of the Payment account of Business.</description>
    <label>Payment Address</label>
    <type>Address</type>
</CustomField>