sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Payment_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Descriptor__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: To store Information appearing on the Mx bank statement.</description>
    <label>Payment Descriptor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>