sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Photoshoot_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Contact_Email__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates photoshoot contact email.</description>
    <label>Photoshoot Contact Email</label>
    <type>Email</type>
</CustomField>