sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Photoshoot_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Contact_First_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates photoshoot contact first name.</description>
    <label>Photoshoot Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>