sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Photoshoot_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Contact_Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15116: It indicates photoshoot contact phone.</description>
    <label>Photoshoot Contact Phone</label>
    <type>Phone</type>
</CustomField>