sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Photoshoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It is used to store the date of the photoshoot.</description>
    <label>Photoshoot Date</label>
    <type>Date</type>
</CustomField>