sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Photoshoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Photoshoot_Time__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It is used to store the time of the photoshoot.</description>
    <label>Photoshoot Time</label>
    <type>Time</type>
</CustomField>