sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Proposed_Date_of_Activation__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Date_of_Activation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: Indicates Proposed Date of store(s) activation is complete.</description>
    <inlineHelpText>Proposed date of store(s) activation is complete</inlineHelpText>
    <label>Proposed Date of Activation</label>
    <type>Date</type>
</CustomField>