sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Provincial_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Tax_ID__c</fullName>
    <description>LEM-15117: To store Provincial Tax ID.</description>
    <label>Provincial Tax Id</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>