sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Representative_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Representative_Date_of_Birth__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15117: It is used to store the birth date of the representative.</description>
    <inlineHelpText>This is the Representative Date of Birth for Stripe Connected Account</inlineHelpText>
    <label>Representative Date of Birth</label>
    <type>Date</type>
</CustomField>