sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Representative_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Representative_First_Name__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It indicates representative first name.</description>
    <inlineHelpText>This is the Representative First Name for Stripe Connected Account</inlineHelpText>
    <label>Representative First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>