sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Representative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Representative_Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: It indicates representative phone.</description>
    <inlineHelpText>This is the Representative Phone for Stripe Connected Account</inlineHelpText>
    <label>Representative Phone</label>
    <type>Phone</type>
</CustomField>