sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>LEM-15117: Indicates Routing Number of the Mx.</description>
    <inlineHelpText>Routing Number of the Mx.</inlineHelpText>
    <label>Routing Number</label>
    <length>18</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>