sfdx-source/force-app/main/default/objects/Business_Onboarding_Detail__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15116: It specifies the street.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>